--- a/pregunton_style.css
+++ b/pregunton_style.css
@@ -81,6 +81,7 @@ h3 {
 .amor { color: #ff3399; }
 .educacion { color: #3399ff; }
 .negocios { color: #336600; }
+.etica { color: #993366; }
 
 /* Estilos para los botones de la página */
 button {
