--- a/pregunton_style.css
+++ b/pregunton_style.css
@@ -7,7 +7,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  height: 300vh;
 }
 
 /* Estilos para el contenedor principal */
@@ -19,6 +19,7 @@ body {
   max-width: 400px;
   text-align: center;
   margin-top: 20px;
+  min-height: 300px; /
 }
 
 /* Estilos para el título principal */
