--- a/pregunton_style.css
+++ b/pregunton_style.css
@@ -12,7 +12,7 @@ body {
 
 /* Estilos para el contenedor principal */
 .container {
-  background-color: #F5F5F5;
+  background-color: #FFFFFF;
   padding: 15px;
   border-radius: 8px;
   width: 90%;
@@ -24,7 +24,7 @@ body {
 
 /* Estilos para el título principal */
 h1 {
-  color: #F5F5F5;
+  color: #FFFFFF;
   font-family: 'Merriweather', sans-serif;;
   font-size: 30px;
   text-align: center;
@@ -34,7 +34,7 @@ h1 {
 
 /* Estilos para el subtítulo */
 h4 {
-  color: #F5F5F5;
+  color: #FFFFFF;
   font-size: 15px;
   font-family: 'Merriweather', sans-serif;;
   border-radius: 0px;
@@ -89,7 +89,7 @@ button {
   background-color: #000000;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
-  color: #F5F5F5;
+  color: #FFFFFF;
   padding: 10px 30px;
   border: none;
   border-radius: 4px;
