--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -1,6 +1,6 @@
 /* Estilo global para el cuerpo de la página */
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family:  'Playfair Display', serif;
   background-color: #000000;
   margin: 0;
   padding: 0;
@@ -25,7 +25,7 @@ body {
 /* Estilos para el título principal */
 h1 {
   color: #FFFFFF;
-  font-family: 'Merriweather', sans-serif;;
+  font-family:  'Playfair Display', serif;
   font-size: 30px;
   text-align: center;
   letter-spacing: 0px;
@@ -36,7 +36,7 @@ h1 {
 h4 {
   color: #FFFFFF;
   font-size: 15px;
-  font-family: 'Merriweather', sans-serif;;
+  font-family:  'Playfair Display', serif;
   border-radius: 0px;
   padding: 5px 10px;
   text-align: center;
@@ -46,7 +46,7 @@ h4 {
 h2 {
   margin-bottom: 10px;
   font-size: 25px;
-  font-family: 'Merriweather', sans-serif;;
+  font-family: 'Playfair Display', serif;
   border-radius: 0px;
   padding: 5px 10px;
   cursor: pointer;
@@ -56,12 +56,12 @@ h2 {
 /* Estilos para la categoría de la pregunta */
 h3 {
   font-size: 18px;
-  font-family: 'Merriweather', sans-serif;;
+  font-family: 'Playfair Display', serif;
 }
 
 /* Estilos para las categorías específicas */
 .category {
-  font-family: 'Merriweather', sans-serif;;
+  font-family:'Playfair Display';
   font-size: 20px;
   font-weight: bold;
 }
@@ -87,7 +87,7 @@ h3 {
 /* Estilos para los botones de la página */
 button {
   background-color: #000000;
-  font-family: 'Montserrat', sans-serif;
+  font-family:  'Playfair Display', serif;
   font-weight: bold;
   color: #FFFFFF;
   padding: 10px 30px;
@@ -109,12 +109,15 @@ button:hover {
 footer {
   background-color: #ffffff;
   color: #000000;
-  padding: 10px;
+  padding: 5px;
   text-align: center;
   position: fixed;
   bottom: 0;
   width: 100%;
   animation: fadeInUp 0.5s ease-out;
+  font-size: 10px;
+  font-family:  'Playfair Display', serif;
+
 }
 
 /* Animación de entrada */
