--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -168,13 +168,17 @@ header {
   padding: 10px;
   color: #000000;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: 100%;
   animation: fadeInUp 0.5s ease-out;
   font-size: 15px;
-  font-family:  'Playfair Display', serif;
+  font-family: 'Playfair Display', serif;
+}
 
+.logo-container {
+  display: flex;
+  align-items: center;
 }
 
 .logo-container img {
@@ -183,49 +187,38 @@ header {
   margin-right: 10px;
 }
 
-nav {
-  display: flex;
-  align-items: center;
+.menu-icon {
+  font-size: 24px;
+  cursor: pointer;
+}
+
+/* Agrega este estilo para los bordes verdes cuando se presiona el logo */
+.logo-container.active img {
+  border: 2px solid #00ff00; /* Puedes ajustar el color y el ancho del borde */
 }
 
 .nav-links {
   list-style: none;
   margin: 0;
   padding: 0;
-  display: flex;
+  display: none; /* Oculta el menú por defecto */
+  flex-direction: column;
+  position: absolute;
+  top: 60px;
+  left: 0;
+  width: 100%;
+  background-color: #ffffff;
+  z-index: 1;
 }
 
 .nav-links li {
-  margin-right: 10px;
-}
-
-
-.menu-icon {
-  font-size: 24px;
-  cursor: pointer;
-  display: none; /* Ocultar el icono del menú en pantallas grandes */
+  text-align: center;
+  padding: 10px;
 }
 
 @media only screen and (max-width: 768px) {
-  .nav-links {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-    left: 0;
-    width: 100%;
-    background-color: #ffffff;
-    z-index: 1;
-  }
-
   .nav-links.show {
     display: flex;
-  }
-
-  .nav-links li {
-    margin-right: 0;
-    text-align: center;
-    padding: 10px;
   }
 
   .menu-icon {
