--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -7,7 +7,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  height: 150vh;
 }
 
 /* Estilos para el contenedor principal */
@@ -105,6 +105,36 @@ button:hover {
   color: #000000;
 }
 
+/* Estilo para el contenedor del botón de selección de tema y menú desplegable */
+.theme-selector-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+/* Estilo para el botón de selección de tema */
+button#themeSelectButton {
+  background-color: #000000;
+  font-family: 'Playfair Display', serif;
+  font-weight: bold;
+  color: #ffffff;
+  padding: 10px 30px;
+  border: 2px solid transparent;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 20px;
+  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+}
+
+/* Estilo para el botón de selección de tema al pasar el ratón */
+button#themeSelectButton:hover {
+  background-color: #0de914;
+  color: #000000;
+  border-color: #00ff00;
+}
+
 /* Estilo para la lista desplegable */
 #themeSelect {
   background-color: #ffffff;
@@ -118,28 +148,26 @@ button:hover {
   margin-top: 20px;
 }
 
-/* Estilo para el botón de selección de tema */
-button#themeSelectButton {
-  background-color: #000000;
-  font-family: 'Playfair Display', serif;
-  font-weight: bold;
-  color: #ffffff;
-  padding: 10px 30px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-  margin-top: 20px;
-  transition: background-color 0.3s, color 0.3s;
+/* Estilo para el menú desplegable */
+.nav-links {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  top: 60px;
+  left: 0;
+  width: 100%;
+  background-color: #ffffff;
+  z-index: 1;
+  text-align: center;
 }
 
-/* Estilos adicionales para centrar la lista desplegable y el botón */
-.center-content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+/* Estilo para los elementos del menú desplegable */
+.nav-links li {
   text-align: center;
+  padding: 10px;
 }
 
 
