--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -77,7 +77,7 @@ h3 {
 .economia { color: #b5b800; }
 .pareja { color: #d40000; }
 .ciencia { color: #4caf50; }
-.historias-personales { color: #e64a19; }
+.vivencias { color: #e64a19; }
 .miedos { color: #413f3f; }
 .amor { color: #ff3399; }
 .educacion { color: #3399ff; }
