--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -135,17 +135,16 @@ button:hover {
 #shareSelectButton:hover {
   background-color: #ffffff;
   color: #000000;
-  border-color: #00ff00;
+  border-color: #0300ab;
 }
 
 a {
-  background-color: #0de914;  /* Color de fondo */
   transition: background-color 0.3s;  /* Transición suave del color de fondo */
 }
 
 /* Cambio de color de fondo al pasar el mouse */
 a:hover {
-  background-color: #000000;
+  color: #000000;
 }
 
 
