--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -82,6 +82,8 @@ h3 {
 .educacion { color: #3399ff; }
 .negocios { color: #336600; }
 .etica { color: #993366; }
+.sexo { color: #cc33ff; }
+
 
 /* Estilos para los botones de la página */
 button {
