--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -339,6 +339,7 @@ header {
   z-index: 1;
 }
 
+
 /* Estilos para el botón de respuesta */
 #showAnswerBoxButton {
   background-color: transparent;
@@ -362,10 +363,7 @@ header {
   margin-top: 10px;
   border: 2px solid #000000;
   border-radius: 5px;
-}
-
-/* Estilos para animar la aparición de la caja de texto */
-#answerBoxContainer {
-  transition: max-height 0.5s ease-out;
-  overflow: hidden;
+  font-family: 'Playfair Display', serif; /* Establece la fuente */
+  font-size: 16px; /* Establece el tamaño de la fuente */
+  line-height: 1.5; /* Establece el espaciado entre líneas */
 }
