--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -374,7 +374,7 @@ header {
 }
 
 #answerBox {
-  background-color: #eeeded;
+  background-color: #ffffff;
   width: 30%;
   padding: 10px;
   border: 2px solid #000000;
