--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -381,7 +381,7 @@ header {
 
 /* Estilos para la caja de texto de respuesta */
 #answerBox {
-  background-color: #ff0000;
+  background-color: #fff;
   padding: 10px;
   border: 2px solid #000000;
   border-radius: 5px;
