--- a/planes/plan.css
+++ b/planes/plan.css
@@ -1,3 +1,10 @@
+/* Estilos generales */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: 'Playfair Display', serif;
     background-color: #eeeded;
