--- a/planes/plan.css
+++ b/planes/plan.css
@@ -1,9 +1,4 @@
-/* Estilos generales */
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+n
 
 body {
     font-family: 'Playfair Display', serif;
