--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -33,32 +33,30 @@ h1 {
   margin-bottom: 0px; /*Espacio de los margenes del boton*/
 }
 
+/*Estilos de pregunta*/
 h2 {
   font-size: 25px;
-  font-family:'Raleway', sans-serif;
+  font-family:'Playfair Display';
   border-radius: 0px;
   padding: 5px 10px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s, border 0.3s;
 }
 
+/* Estilos para la categoría de la pregunta */
+h3 {
+  font-size: 18px;
+  font-family: 'Raleway', sans-serif;
+}
+
 /* Estilos para el subtítulo */
 h4 {
   color: #FFFFFF;
   font-size: 15px;
-  font-family:  'Playfair Display', serif;
+  font-family:'Raleway', sans-serif;
   border-radius: 0px;
   padding: 5px 10px;
   text-align: center;
-}
-
-/* Estilos para las preguntas */
-
-
-/* Estilos para la categoría de la pregunta */
-h3 {
-  font-size: 18px;
-  font-family: 'Playfair Display', serif;
 }
 
 /* Estilos para las categorías específicas */
@@ -69,7 +67,8 @@ h3 {
 }
 
 /* Estilos para las diferentes categorías de preguntas */
-.psicologia { color: #3333cc; }
+/*Piscologia elemento, entre las llaves {el diseño}*/
+.psicologia { color: #3333cc; } /*Color por palabra y categoria */
 .religion { color: #99004d; }
 .politica { color: #ff5733; }
 .desarrollo { color: #9966ff; }
@@ -92,12 +91,12 @@ h3 {
 button {
   background-color: #000000;
   font-family:  'Playfair Display', serif;
-  font-weight: bold;
+  font-weight: bold; /*letra mas gruesa*/
   color: #FFFFFF;
   padding: 10px 30px;
   border: none;
   border-radius: 4px;
-  cursor: pointer;
+  cursor: pointer;/*Cambiar el cursos a una manito*/
   font-size: 16px;
   margin-top: 20px;
   transition: background-color 0.3s, color 0.3s;
@@ -113,9 +112,9 @@ button:hover {
 
 /* Estilo para el contenedor del botón de selección de tema y menú desplegable */
 .theme-selector-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: flex; /*Haces que el contenedor se pueda ordenar de forma flexible*/
+  flex-direction: column; /*Como se van a desplegar, aqui dice que de forma de columna*/
+  align-items: center; /*Alinearlos de forma vertical*/
   text-align: center;
 }
 
